fixed language toggle position on mobile

--- a/app/src/scss/_language_toggle.scss
+++ b/app/src/scss/_language_toggle.scss
@@ -45,8 +45,9 @@
     }
 
     .mobile & {
+      position: absolute;
       display: inline-block;
-      top: 60px;
+      top: 0;
       left: 0;
     }
   }
